2002-01-14  Glynn Foster  <glynn.foster@sun.com>

	* Makefile.am: Make dist fixes. Actually these probably don't
	help at all...it's any excuse to get it to build ;)

2002-01-13  Alexander Larsson  <alla@lysator.liu.se>

	* panel-util.[ch]:
	Make convert_string_to_keysym_state() use gtk_accelerator_parse()
	and convert_keysym_state_to_string() use gtk_accelerator_name().

	* gnome-panel-properties.glade:
	Convert to new keysym string format.

	* panel-config-global.h:
	Make the _state variables GdkModifierType.

	* panel-widget.[ch]:
	Remove "applet_draw" signal.
	
2002-01-12  Glynn Foster  <glynn.foster@sun.com>

	* applet.c, panel-gconf.c, panel.c: Tighten up the 
	dir_exists keys for when we have instant apply..post 2.0

2002-01-12  Glynn Foster  <glynn.foster@sun.com>

	* menu.c: Make the multiple foobar alert dialog modal so it 
	disappears. Fixes #68596.

2002-01-12  Glynn Foster  <glynn.foster@sun.com>

	* main.c: (main): Add in the name of the executable to avoid
	crashing on logout. Thanks to owen for spotting this. Everyone
	else is too afraid to run gnome-session :)

2002-01-11  Mark McLoughlin  <mark@skynet.ie>

	* panel-gconf.c: (panel_gconf_dir_exists): use GError.

	* rgb-stuff.[ch]: kill everything but transform_pixbuf.

2002-01-11  Glynn Foster  <glynn.foster@sun.com>

	* panel-applet-frame.c: Use normal profile key for saving to, not 
	default profile key.

2002-01-11  Mark McLoughlin  <mark@skynet.ie>

	* applet.c:
	(panel_applet_load_from_unique_id), (panel_applet_load_list):
	fix memleaks.

	* panel-gconf.h: add PANEL_GCONF_DEFAULT_PROFILE.

	* panel.c: (panel_session_init_panels): use it.

Thu Jan 10 23:27:54 2002  George Lebl <jirka@5z.com>

	* Makefile.am, foobar-widget.c, menu.[ch], panel-config.c,
	  panel-util.c, panel.c, session.c, tearoffitem.[ch]:
	  Remove tearoff menus, they sucked.  We can readd them when
	  we implement them properly.

	* gnome-run.c:  Port to TreeView, so we are now completely